--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "classnames": "^2.3.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.32.0"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
