--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "classnames": "^2.3.1",
     "next": "12.1.6",
+    "next-auth": "^4.5.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.0",
