--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.0",
+    "react-toastify": "^9.0.4",
     "yup": "^0.32.11",
     "zustand": "^4.0.0-rc.1"
   },
