--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.1",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
+    "nodemailer": "^6.7.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "17.0.42",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
