--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": "dotenv -c development prisma",
+    "migrate": "yarn prisma migrate dev",
+    "generate": "yarn prisma generate"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.9.1",
+    "@prisma/client": "^3.15.2",
     "@tailwindcss/forms": "^0.5.2",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "dotenv-cli": "^5.1.0",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "nodemailer": "^6.7.5",
@@ -33,6 +39,7 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
+    "prisma": "^3.15.2",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.3"
   }
