--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.0",
     "react-toastify": "^9.0.4",
+    "swr": "^1.3.0",
     "yup": "^0.32.11",
     "zustand": "^4.0.0-rc.1"
   },
