--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "dotenv-cli": "^5.1.0",
+    "gray-matter": "^4.0.3",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "nodemailer": "^6.7.5",
@@ -26,6 +27,8 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.32.0",
     "react-toastify": "^9.0.4",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "sharp": "^0.30.7",
     "swr": "^1.3.0",
     "yup": "^0.32.11",
