--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "dotenv-cli": "^5.1.0",
+    "formidable": "^2.0.1",
     "gray-matter": "^4.0.3",
+    "minio": "^7.0.30",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
     "nodemailer": "^6.7.5",
@@ -35,7 +37,9 @@
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.42",
+    "@types/formidable": "^2.0.5",
+    "@types/minio": "^7.0.13",
+    "@types/node": "^18.6.5",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
