--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@hookform/resolvers": "^2.9.1",
     "@prisma/client": "^3.15.2",
     "@tailwindcss/forms": "^0.5.2",
+    "@tanstack/match-sorter-utils": "^8.1.1",
+    "@tanstack/react-table": "^8.5.11",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "dotenv-cli": "^5.1.0",
