--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "formidable": "^2.0.1",
     "gray-matter": "^4.0.3",
     "minio": "^7.0.30",
-    "next": "12.1.6",
-    "next-auth": "^4.5.0",
+    "next": "^12.3.1",
+    "next-auth": "^4.14.0",
     "nodemailer": "^6.7.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
