--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "start": "next start",
     "lint": "next lint",
     "prisma": "dotenv -c development prisma",
-    "migrate": "yarn prisma migrate dev & yarn prisma generate"
+    "migrate": "yarn prisma migrate dev & yarn prisma generate",
+    "reset": "yarn prisma migrate reset & yarn prisma generate"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.9.1",
-    "@prisma/client": "^3.15.2",
+    "@prisma/client": "^4.8.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tanstack/match-sorter-utils": "^8.1.1",
     "@tanstack/react-table": "^8.5.11",
-    "axios": "^0.27.2",
+    "axios": "^1.2.2",
     "classnames": "^2.3.1",
     "dotenv-cli": "^5.1.0",
     "formidable": "^2.0.1",
@@ -50,7 +51,7 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "prisma": "^3.15.2",
+    "prisma": "^4.8.0",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.3"
   }
