--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "formidable": "^2.0.1",
     "gray-matter": "^4.0.3",
     "minio": "^7.0.30",
-    "next": "^12.3.1",
+    "next": "^13.1.4",
     "next-auth": "^4.14.0",
     "nodemailer": "^6.7.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.0",
     "react-scroll-parallax": "^3.3.2",
     "react-toastify": "^9.0.4",
@@ -51,7 +51,7 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "prisma": "^4.8.0",
+    "prisma": "^4.9.0",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.3"
   }
