--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dotenv-cli": "^5.1.0",
     "formidable": "^2.0.1",
     "gray-matter": "^4.0.3",
-    "minio": "^7.0.30",
+    "minio": "^7.0.33",
     "next": "^13.1.4",
     "next-auth": "^4.14.0",
     "nodemailer": "^6.7.5",
@@ -54,5 +54,8 @@
     "prisma": "^4.9.0",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.3"
-  }
+  },
+	"resolutions": {
+		"xml2js": "^0.5.0"
+	}
 }
