--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.0",
+    "react-markdown": "^8.0.7",
     "react-scroll-parallax": "^3.3.2",
     "react-toastify": "^9.0.4",
+    "rehype-raw": "^6.1.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "remark-unwrap-images": "^3.0.1",
     "sharp": "^0.30.7",
     "swr": "^2.0.0",
     "yup": "^0.32.11",
