--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"remark": "^14.0.2",
 		"remark-html": "^15.0.1",
 		"remark-unwrap-images": "^3.0.1",
-		"sharp": "^0.30.7",
+		"sharp": "^0.32.6",
 		"swr": "^2.0.0",
 		"yup": "^0.32.11",
 		"zustand": "^4.0.0-rc.1"
@@ -57,9 +57,9 @@
 		"@types/react": "18.0.12",
 		"@types/react-dom": "18.0.5",
 		"autoprefixer": "^10.4.7",
-		"eslint": "8.17.0",
+		"eslint": "^8.51.0",
 		"eslint-config-next": "12.1.6",
-		"postcss": "^8.4.26",
+		"postcss": "^8.4.31",
 		"prisma": "^5.1.1",
 		"tailwindcss": "^3.1.2",
 		"ts-node": "^10.9.1",
