--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
 		"remark-unwrap-images": "^3.0.1",
 		"sharp": "^0.32.6",
 		"swr": "^2.0.0",
+		"unzipper": "^0.12.2",
+		"yarn": "^1.22.22",
 		"yup": "^0.32.11",
 		"zustand": "^4.0.0-rc.1"
 	},
@@ -56,6 +58,7 @@
 		"@types/nodemailer": "^6.4.4",
 		"@types/react": "18.0.12",
 		"@types/react-dom": "18.0.5",
+		"@types/unzipper": "^0.10.9",
 		"autoprefixer": "^10.4.7",
 		"eslint": "^8.51.0",
 		"eslint-config-next": "12.1.6",
